toss-반응형 수정중

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
     <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="Media.css" />
   </head>
   <body>
     <nav class="nav-bar">
@@ -33,6 +34,63 @@
             <span>ENG</span>
           </div>
         </div>
+      </div>
+    </nav>
+    <nav class="m-nav-bar">
+      <div class="m-nav-bar-inner">
+        <div class="nav-bar-logo">
+          <a href="#">
+            <img src="img/eco_logo.png" alt="Eco-Logo" />
+          </a>
+        </div>
+        <div class="m-navbar-right">
+          <button type="button">앱 다운로드</button>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-align-justify"
+          >
+            <line x1="3" x2="21" y1="6" y2="6" />
+            <line x1="3" x2="21" y1="12" y2="12" />
+            <line x1="3" x2="21" y1="18" y2="18" />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-x"
+          >
+            <path d="M18 6 6 18" />
+            <path d="m6 6 12 12" />
+          </svg>
+        </div>
+      </div>
+      <div class="m-menu">
+        <ul>
+          <li><a href="#">회사소개</a></li>
+          <li><a href="#">고객센터</a></li>
+          <li><a href="#">자주 묻는 질문</a></li>
+          <li><a href="#">토스인증서</a></li>
+          <li><a href="#">채용</a></li>
+          <li>
+            <a href="#"><span>KOR</span></a>
+            <span>|</span>
+            <a href="#">ENG</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
@@ -286,6 +344,12 @@
               송금처럼 쉬운 구매 경험<br />
               그리고 투자 판단에<br />
               도움을 주는 콘텐츠까지
+            </p>
+          </div>
+          <div class="mobile-invest-info">
+            <p>
+              이해하기 쉬운 용어 설명이 필요 없는 직관적인 화면 구성, 송금처럼
+              쉬운 구매 경험 그리고 투자 판단에 도움을 주는 콘텐츠까지
             </p>
           </div>
           <div class="invest-img">
