toss 반응형 완료

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         </div>
       </div>
     </nav>
-    <nav class="m-nav-bar">
+
+    <nav class="m-nav-bar fixed">
       <div class="m-nav-bar-inner">
         <div class="nav-bar-logo">
           <a href="#">
